// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileCard/> renders the ProfileCard  1`] = `
<div
  className="card card cl-themed-card"
>
  <div
    className="titleContainer"
  >
    <h1
      className="title"
    >
      Profile
    </h1>
    <p
      className="subtitle"
    >
      Manage profile settings
    </p>
  </div>
  <div
    className="cl-titled-card-list"
  >
    <div
      className="cl-list-item elementContainer"
      disabled={false}
    >
      <div
        className="title"
      >
        Photo
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          <div
            className="uploaderWrapper wrapper"
            onClick={[Function]}
          >
            <img
              alt=""
              className="avatar cl-image"
              height={64}
              onError={[Function]}
              src="https://www.gravatar.com/avatar?d=mp"
              title=""
              width={64}
            />
            <div
              className="touchContainer"
            >
              <svg
                data-filename="../shared/assets/icons/camera.svg"
              />
            </div>
            <div
              className="hoverContainer"
            >
              <svg
                data-filename="../shared/assets/icons/camera.svg"
              />
            </div>
          </div>
        </div>
        <div
          className="iconContainer"
        />
      </div>
    </div>
    <button
      className="cl-list-item elementContainer button hoverable"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="title"
      >
        Email
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          <div
            className="cl-list-item-entry"
          >
            <div>
              clerk@clerk.dev
              <span
                className="tag primary sm"
              >
                Primary
              </span>
              <span
                className="tag success sm cl-tag"
              >
                Verified
              </span>
            </div>
            <div>
              clerk-unverified@clerk.dev
              <span
                className="tag primary sm"
              >
                Primary
              </span>
              <span
                className="tag error sm cl-tag"
              >
                Unverified
              </span>
            </div>
          </div>
        </div>
        <div
          className="iconContainer"
        >
          <svg
            data-filename="../shared/assets/icons/arrow-right.svg"
          />
        </div>
      </div>
    </button>
    <button
      className="cl-list-item elementContainer button hoverable"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="title"
      >
        Phone number
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          <div
            className="cl-empty-list-item"
          >
            None
          </div>
        </div>
        <div
          className="iconContainer"
        >
          <svg
            data-filename="../shared/assets/icons/arrow-right.svg"
          />
        </div>
      </div>
    </button>
    <button
      className="cl-list-item elementContainer button hoverable"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="title"
      >
        Connected accounts
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          <div
            className="cl-empty-list-item"
          >
            None
          </div>
        </div>
        <div
          className="iconContainer"
        >
          <svg
            data-filename="../shared/assets/icons/arrow-right.svg"
          />
        </div>
      </div>
    </button>
    <button
      className="cl-list-item elementContainer button hoverable"
      disabled={false}
    >
      <div
        className="title"
      >
        Wallet address
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          0x123456789
        </div>
        <div
          className="iconContainer"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<ProfileCard/> renders the ProfileCard 1`] = `
<div
  className="card card cl-themed-card"
>
  <div
    className="titleContainer"
  >
    <h1
      className="title"
    >
      Profile
    </h1>
    <p
      className="subtitle"
    >
      Manage profile settings
    </p>
  </div>
  <div
    className="cl-titled-card-list"
  >
    <div
      className="cl-list-item elementContainer"
      disabled={false}
    >
      <div
        className="title"
      >
        Photo
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          <div
            className="uploaderWrapper wrapper"
            onClick={[Function]}
          >
            <img
              alt=""
              className="avatar cl-image"
              height={64}
              onError={[Function]}
              src="https://www.gravatar.com/avatar?d=mp"
              title=""
              width={64}
            />
            <div
              className="touchContainer"
            >
              <svg
                data-filename="../shared/assets/icons/camera.svg"
              />
            </div>
            <div
              className="hoverContainer"
            >
              <svg
                data-filename="../shared/assets/icons/camera.svg"
              />
            </div>
          </div>
        </div>
        <div
          className="iconContainer"
        />
      </div>
    </div>
    <button
      className="cl-list-item elementContainer button hoverable"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="title"
      >
        Email
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          <div
            className="cl-list-item-entry"
          >
            <div>
              clerk@clerk.dev
              <span
                className="tag primary sm"
              >
                Primary
              </span>
              <span
                className="tag success sm cl-tag"
              >
                Verified
              </span>
            </div>
            <div>
              clerk-unverified@clerk.dev
              <span
                className="tag primary sm"
              >
                Primary
              </span>
              <span
                className="tag error sm cl-tag"
              >
                Unverified
              </span>
            </div>
          </div>
        </div>
        <div
          className="iconContainer"
        >
          <svg
            data-filename="../shared/assets/icons/arrow-right.svg"
          />
        </div>
      </div>
    </button>
    <button
      className="cl-list-item elementContainer button hoverable"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="title"
      >
        Phone number
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          <div
            className="cl-empty-list-item"
          >
            None
          </div>
        </div>
        <div
          className="iconContainer"
        >
          <svg
            data-filename="../shared/assets/icons/arrow-right.svg"
          />
        </div>
      </div>
    </button>
    <button
      className="cl-list-item elementContainer button hoverable"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="title"
      >
        Connected accounts
      </div>
      <div
        className="listItem line"
      >
        <div
          className="start"
        >
          <div
            className="cl-empty-list-item"
          >
            None
          </div>
        </div>
        <div
          className="iconContainer"
        >
          <svg
            data-filename="../shared/assets/icons/arrow-right.svg"
          />
        </div>
      </div>
    </button>
  </div>
</div>
`;
